# dansguardian

./: Makefile.am  README
CVSROOT/: loginfo
dansguardian/: AUTHORS  ChangeLog  HOWTOBuildRelease.txt  INSTALL  Makefile.am  NEWS  README  UPGRADING  autogen.sh  configure.ac
dansguardian/configs/: Makefile.am  dansguardian.conf.in  dansguardianf1.conf.in
dansguardian/configs/authplugins/: Makefile.am  ip.conf.in  ntlm.conf  proxy-ntlm.conf  proxy.conf
dansguardian/configs/contentscanners/: Makefile.am  clamav.conf.in  clamdscan.conf.in  icapscan.conf.in  kavav.conf.in  kavdscan.conf.in
dansguardian/configs/downloadmanagers/: Makefile.am  default.conf.in  fancy.conf.in  trickle.conf.in
dansguardian/configs/lists/: Makefile.am  bannedextensionlist  bannedphraselist.in  bannedregexpurllist  bannedsitelist  bannedsitelist.in  bannedurllist  bannedurllist.in  contentregexplist  exceptionfilesitelist  exceptionphraselist.in  exceptionregexpurllist  exceptionsitelist  exceptionuserlist  greysitelist  pics  urlregexplist  weightedphraselist.in
dansguardian/configs/lists/authplugins/: Makefile.am
dansguardian/configs/lists/blacklists/: Makefile.am
dansguardian/configs/lists/blacklists/ads/: domains  urls
dansguardian/configs/lists/contentscanners/: Makefile.am  exceptionvirusextensionlist  exceptionvirusmimetypelist
dansguardian/configs/lists/downloadmanagers/: Makefile.am  managedmimetypelist
dansguardian/configs/lists/phraselists/: Makefile.am
dansguardian/configs/lists/phraselists/badwords/: weighted_dutch  weighted_french  weighted_german  weighted_portuguese  weighted_spanish
dansguardian/configs/lists/phraselists/chat/: weighted  weighted_italian
dansguardian/configs/lists/phraselists/drugadvocacy/: weighted
dansguardian/configs/lists/phraselists/dutchbadwords/: weighted
dansguardian/configs/lists/phraselists/forums/: weighted
dansguardian/configs/lists/phraselists/frenchbadwords/: weighted
dansguardian/configs/lists/phraselists/frenchpornography/: weighted
dansguardian/configs/lists/phraselists/gambling/: banned  banned_portuguese  weighted  weighted_portuguese
dansguardian/configs/lists/phraselists/games/: weighted
dansguardian/configs/lists/phraselists/germanpornography/: weighted
dansguardian/configs/lists/phraselists/goodphrases/: exception  exception_email  weighted  weighted_general  weighted_general_danish  weighted_general_dutch  weighted_general_portuguese  weighted_news
dansguardian/configs/lists/phraselists/googlesearches/: banned
dansguardian/configs/lists/phraselists/gore/: weighted_portuguese
dansguardian/configs/lists/phraselists/illegaldrugs/: banned  weighted  weighted_portuguese
dansguardian/configs/lists/phraselists/intolerance/: banned_portuguese  weighted  weighted_portuguese
dansguardian/configs/lists/phraselists/italianbadwords/: weighted
dansguardian/configs/lists/phraselists/legaldrugs/: weighted
dansguardian/configs/lists/phraselists/malware/: weighted
dansguardian/data/: Makefile.am  dansguardian.pl
dansguardian/data/languages/: Makefile.am
dansguardian/data/languages/arspanish/: messages  template.html
dansguardian/data/languages/bulgarian/: messages  template.html
dansguardian/data/languages/chinesebig5/: messages
dansguardian/data/languages/chinesegb2312/: messages  template.html
dansguardian/data/languages/czech/: messages  template.html
dansguardian/data/languages/danish/: messages  template.html
dansguardian/data/languages/dutch/: messages  template.html
dansguardian/data/languages/french/: messages  template.html
dansguardian/data/languages/german/: messages  template.html
dansguardian/data/languages/german2/: messages  template.html
dansguardian/data/languages/hebrew/: messages  template.html
dansguardian/data/languages/hungarian/: template.html
dansguardian/data/languages/indonesian/: messages  template.html
dansguardian/data/languages/italian/: messages  template.html
dansguardian/data/languages/lithuanian/: messages  template.html
dansguardian/data/languages/malay/: template.html
dansguardian/data/languages/mxspanish/: messages  template.html
dansguardian/data/languages/polish/: messages
dansguardian/data/languages/portuguese/: messages  template.html
dansguardian/data/languages/ptbrazilian/: fancydmtemplate.html  template.html
dansguardian/data/languages/russian-1251/: fancydmtemplate.html  messages  template.html
dansguardian/data/languages/russian-koi8-r/: messages  template.html
dansguardian/data/languages/slovak/: messages  template.html
dansguardian/data/languages/spanish/: messages  template.html
dansguardian/data/languages/swedish/: messages  template.html
dansguardian/data/languages/turkish/: fancydmtemplate.html  messages
dansguardian/data/languages/ukenglish/: fancydmtemplate.html  messages  template.html
dansguardian/data/scripts/: Makefile.am  systemv-init.in
dansguardian/doc/: FAQ  FAQ.html  Makefile.am  Plugins  dansguardian.8  faqconv.pl
dansguardian/lib/: ctime_r.cpp  ctime_r.h  syslog.cpp
dansguardian/src/: Auth.cpp  Auth.hpp  BackedStore.cpp  BackedStore.hpp  BaseSocket.cpp  BaseSocket.hpp  ConfigVar.cpp  ConfigVar.hpp  ConnectionHandler.cpp  ConnectionHandler.hpp  ContentScanner.cpp  ContentScanner.hpp  DataBuffer.cpp  DataBuffer.hpp  DownloadManager.cpp  DownloadManager.hpp  DynamicIPList.cpp  DynamicIPList.hpp  DynamicURLList.cpp  DynamicURLList.hpp  FDFuncs.cpp  FDFuncs.hpp  FDTunnel.cpp  FDTunnel.hpp  FOptionContainer.cpp  FOptionContainer.hpp  FatController.cpp  FatController.hpp  HTMLTemplate.cpp  HTMLTemplate.hpp  HTTPHeader.cpp  HTTPHeader.hpp  IPList.cpp  IPList.hpp  Ident.cpp  Ident.hpp  ImageContainer.cpp  ImageContainer.hpp  LanguageContainer.cpp  LanguageContainer.hpp  (+29 more)
dansguardian/src/authplugins/: digest.cpp  ident.cpp  ip.cpp  ntlm.cpp  proxy.cpp  winuser.cpp
dansguardian/src/contentscanners/: Makefile.am  clamav.cpp  clamdscan.cpp  commandlinescan.cpp  icapscan.cpp  kavav.cpp  kavdscan.cpp
dansguardian/src/downloadmanagers/: Makefile.am  default.cpp  fancy.cpp  trickle.cpp
(+75 files in other folders)
